# BarclaysWeeklyTransactionRetrieval

./: .env.example  .gitignore  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
scripts/: check_no_secrets.py
src/barclays_weekly_transaction_retrieval/: auth.py  cli.py  client.py  config.py  dates.py  exceptions.py  exporters.py  mock_api.py  models.py  normalise.py  pipeline.py  state.py
