[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "barclays-weekly-transaction-retrieval"
version = "0.1.0"
description = "Weekly Barclays API transaction retrieval and reconciliation export workflow"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mark R. S." }]
dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[project.scripts]
barclays-weekly = "barclays_weekly_transaction_retrieval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
